# aurex.ai

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CURRENT_STATUS.md  FINAL_FIXES.md  FIXES_APPLIED.md  LICENSE  Makefile  QUICKSTART.md  README.md  SPRINT_3_FEATURES.md  START-HERE.md  alltick_fetcher.py  docker-compose.yml  env.example  fetch_gold_news.py  fetch_prices_csv.py  insert_real_data.sql  insert_test_data.sql  mcp-server-config.json  pyproject.toml  pytest.ini  realtime_fetcher.py  realtime_gold_fetcher.py  requirements-minimal.txt  requirements.txt  run-backend.ps1  run-dashboard.ps1  test_newsapi.py
.cursor/rules/: aurex-rules.mdc
.github/workflows/: ci.yml
apps/backend/: Dockerfile  fetch_gold_news.py  fetch_realtime.py  main.py  realtime_price_streamer.py  start_realtime_backend.py  start_with_fetcher.sh  websocket_manager.py
apps/backend/app/: __init__.py
apps/backend/app/api/: __init__.py
apps/backend/app/api/v1/: __init__.py  alerts.py  health.py  news.py  price.py  sentiment.py  websocket.py
apps/dashboard/: GOLD_PRICE_FACTORS.md  MARKET_STATUS_FEATURE.md  README.md  THEME_FIX.md  UX_IMPROVEMENTS.md  package-lock.json  package.json  tailwind.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/components/: AlertPanel.tsx  MarketStatus.tsx  NewsFeed.tsx  PriceCard.tsx  PriceChart.tsx  SentimentChart.tsx  SentimentGauge.tsx  ThemeProvider.tsx  ThemeToggle.tsx
apps/dashboard/lib/: hooks-realtime.ts  websocket.ts
apps/pipeline/: Dockerfile  fetch_news_with_sentiment.py  main.py  prefect.yaml
apps/pipeline/flows/: __init__.py  gold_sentiment_flow.py
apps/pipeline/tasks/: __init__.py  fetch_news.py  fetch_price.py  sentiment_aggregator.py
docs/: API_GUIDE.md  API_INTEGRATION_GUIDE.md  CODEBASE_CLEANUP_SUMMARY.md  COMPLETE_STARTUP_GUIDE.md  DATABASE_CONFIGURATION.md  DEPLOYMENT.md  DOCKER_MCP_QUICK_REF.md  DOCKER_MCP_SUCCESS.md  DOCKER_TROUBLESHOOTING.md  EXECUTIVE_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  MCP_DOCKER_GUIDE.md  NEWSAPI_SUCCESS_SUMMARY.md  PORT_8000_ISSUE.md  PRODUCT_BACKLOG.md  PROJECT_IMPROVEMENTS_SUMMARY.md  REALTIME_ARCHITECTURE.md  SPRINT_0_REPORT.md  SPRINT_1_COMPLETE.md  SPRINT_1_DAY1_SUMMARY.md  SPRINT_1_PLAN.md  SPRINT_1_STATUS.md  SPRINT_2_COMPLETE.md  SPRINT_2_PLAN.md  SPRINT_2_STATUS.md  SPRINT_2_SUMMARY.md  SPRINT_3_COMPLETE.md  SPRINT_3_PLAN.md  SPRINT_PLANNING.md  START-APPLICATION.md  START_REALTIME_SYSTEM.md  SYSTEM_READY.md  architecture.md  prd.md
infra/: init_db.sql
scripts/: docker_cli.py  init-project.ps1  init-project.sh  mcp_docker_manager.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_models.py  test_sentiment.py
